test/conformance/chainsaw/validate/clusterpolicy/standard/cel/subreource/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cel-subresource
spec:
  concurrent: false
  steps:
  - name: create policies
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policies.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cel-deny-scale-deployment
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cel-deny-scale-statefulset
  - name: step-02
    try:
    - apply:
        file: resources.yaml
  - name: step-03
    try:
    - script:
        content: "if kubectl scale deployment nginx-deployment --replicas 0\nthen
          \n  exit 0\nelse \n  exit 1\nfi\n"
    - script:
        content: "if kubectl scale sts nginx-sts --replicas 0\nthen \n  exit 1\nelse
          \n  exit 0\nfi\n"
